--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-		<title> "Wyszukiwarka Teleadresowa" </title>
+		<title>Spis telefonów</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="styles/Template.css" />
@@ -11,7 +11,7 @@
     </head>
 
     <body id="body">
-        <input type="search" id="searchInput" placeholder="Wyszukuj" />
+        <input type="search" id="searchInput" placeholder="Wyszukaj" />
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/jquery.tablesorter.js"></script>
